- MI file: Support for 32bit binary files was added.
- MicroProf: Can read binary FRT files (the first channel only).
- Profile: The profile resolution is no longer limited by the data dimensions.
- Nanoscope: Files broken by line-end transformations are detected and an
  explanatory error message is given.

Other:
- Forgotten @LIBTIFF@ was removed from gwyddion pkg-config file.
- Building RPMs works on Mandriva again.


2.16 (2009-06-25)
Application:
- Translations updated: Czech, French, Russian.
- About dialog shows optional features compiled into the specific build.

Libraries:
- libgwyprocess: Missing data field invalidation after Laplace iteration was
  added, fixing wrong color scales after Laplace interpolation data removal.
- libgwyddion: Lorentzian fitting preset parameter estimator was corrected.
- libgwyprocess: Broken Fourier transformations of large prime sizes with
  stride larger than one were fixed in simpleFFT (does not affect FFTW).
- libgwydraw: GwySelection has a new virtual method crop().
- libgwydraw: Function for filtering objects in GwySelection was added.
- libgwyapp: Layout of previews in file dialogs, broken by Gtk+ 2.16, was
  corrected.
- libgwydgets: GwyDataView provides real offsets of displayed data field.
- libgwydgets: Truncated logarithmic axes were really fixed.

Modules:
- Selection manager tool (new): Copies selections to other chanels and files.
- FFT profile (new): Reads radial FFT modulus profiles.
- PSIA: Format version 1.0.2 is supported.
- OLS, JPK: GwyTIFF is used instead of libTIFF for file loading.  This should
  fix a number of TIFF-related problems, namely on MS Windows.
- RHK-SM3: Bug that prevented loading of some SM3 files was fixed.
- WSxM: Files produced by Nanonics AFM are supported.
- Pixmap export: libTIFF is no longer used, TIFF files are written directly.
- Rawfile: Support for 64bit integer built-in types was added.
- Rawfile: Updating the preview with Alt+U uses the new value of just-editted
  field.